[package]
name = "json-schema-traverse"
version = "0.1.1"
edition = "2021"
description = "recursively walk a JSON Schema, invoking pre/post callbacks on each subschema"
license = "MIT"
repository = "https://github.com/hey-jj/json-schema-traverse"
readme = "README.md"
keywords = ["json-schema", "traverse", "schema", "json", "visitor"]
categories = ["parsing", "data-structures"]

[dependencies]
# preserve_order keeps object keys in document order so callbacks fire in the
# same order as the source schema. The traversal contract depends on it.
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
# Deserialize golden call records from the JSON fixtures.
serde = { version = "1", features = ["derive"] }
# Readable diffs when a golden call sequence does not match.
pretty_assertions = "1"
# Property tests for pointer soundness, pre/post symmetry, and escaping.
proptest = "1"
